--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ lalrpop = "0.22.1"
 [dependencies]
 lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
 petgraph = "0.7.1"
+regex = "1.11.1"
