--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 lalrpop = "0.22.1"
 
 [dependencies]
+clap = { version = "4.5.32", features = ["derive"] }
 lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
